@@ -15,6 +15,7 @@ Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0                        
 Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
 Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
 Scala Hadoop Enrich: created ScalazJson4sUtils.scala
+Scala Hadoop Enrich: created enrichmentConfigs.scala
 Redshift: bumped table-def to 0.4.0
 Redshift: added etl_tstamp to atomic.events (#819)
 Redshift: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#834)
